<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvvm.view.activities.SettingsActivity">

    <View
        android:id="@+id/view_title_settings"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/app_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:id="@+id/settings_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_title_settings"
        app:layout_constraintBottom_toBottomOf="@id/view_title_settings"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_marginStart="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_title_settings"
        app:layout_constraintTop_toBottomOf="@id/view_title_settings"
        android:text="@string/title_settings_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <TextView

        android:id="@+id/title_past_days"
        style="@style/settings_title_text_style_of_days"
        android:text="@string/txt_label_past_days"
        app:layout_constraintTop_toBottomOf="@id/txt_title_settings"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"/>
    <TextView
        android:layout_width="0dp"
        android:id="@+id/hint_past_days"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/title_past_days"
        app:layout_constraintEnd_toEndOf="@id/title_past_days"
        app:layout_constraintTop_toBottomOf="@id/title_past_days"
        android:layout_marginTop="4dp"
        android:paddingEnd="8sp"
        android:paddingStart="8sp"
        android:textSize="11sp"
        android:text="@string/txt_hint_past_days"/>

    <EditText
        android:id="@+id/past_days_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/title_past_days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_past_days"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:hint="@string/num_days"
        android:inputType="number"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/title_future_days"
        style="@style/settings_title_text_style_of_days"
        android:text="@string/txt_label_future_days"
        app:layout_constraintTop_toBottomOf="@id/hint_past_days"
        app:layout_constraintStart_toStartOf="@id/title_past_days"
        app:layout_constraintEnd_toEndOf="@id/title_past_days"
        android:layout_marginTop="14dp"/>

    <TextView
        android:layout_width="0dp"
        android:id="@+id/hint_future_days"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/title_past_days"
        app:layout_constraintEnd_toEndOf="@id/title_past_days"
        app:layout_constraintTop_toBottomOf="@id/title_future_days"
        android:layout_marginTop="4dp"
        android:paddingEnd="8sp"
        android:paddingStart="8sp"
        android:textSize="11sp"
        android:text="@string/txt_hint_future_days"/>

    <EditText
        android:id="@+id/future_days_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/title_future_days"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_future_days"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        android:hint="@string/num_days"
        android:inputType="number"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btn_save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hint_future_days"
        android:layout_marginTop="14dp"
        android:text="@string/sace_settings_btn"
        android:textColor="@color/white"
        android:textSize="16sp"/>






</androidx.constraintlayout.widget.ConstraintLayout>