<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


            <EditText

                android:id="@+id/dialog_name_action_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/label_name_action_setting_dialog"
                android:lines="1"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/dialog_info_action_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/label_info_action_setting_dialog"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_name_action_setting" />

            <LinearLayout
                android:id="@+id/title_parameters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_info_action_setting">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/titile_parameters_action_setting"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/status_action_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_parameters">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lable_status_action"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/frequency_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/status_action_block">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_txt_req"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <Spinner
                    android:id="@+id/frequency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                     />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/title_time_of_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frequency_block">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_to_generate_actions"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/block_set_action_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_time_of_actions">

                <LinearLayout
                    android:id="@+id/block_dates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <EditText
                        android:textAlignment="center"
                        android:id="@+id/ed_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:hint="@string/hint_day"
                        android:inputType="number"
                        android:textSize="12sp" />

                    <Spinner
                        android:id="@+id/months"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                         />

                    <EditText
                        android:textAlignment="center"
                        android:id="@+id/ed_year"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:hint="@string/hint_year"
                        android:inputType="number"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:id="@+id/block_week_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner

                        android:id="@+id/weekdays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/block_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:textAlignment="center"
                        android:id="@+id/ed_hours"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_hours"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="11sp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textColor="@color/black"
                        android:textSize="11sp" />

                    <EditText
                        android:textAlignment="center"
                        android:id="@+id/ed_minutes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_minutes"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="11sp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textColor="@color/black"
                        android:textSize="11sp" />

                    <EditText
                        android:textAlignment="center"
                        android:id="@+id/ed_seconds"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_seconds"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textSize="11sp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/add_action_to_database"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/app_color"
                android:text="@string/add_action_setting"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/block_set_action_time" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>